Fixed most issues, 0.1 release

--- a/js/app/body/recorded-call-body-array-template.html
+++ b/js/app/body/recorded-call-body-array-template.html
@@ -2,7 +2,7 @@
 
 	<!-- Length -->
 	<div layout="row" flex>
-		<md-input-container style="width: 200px">
+		<md-input-container style="width: 100">
 			<label>Length comparator</label>
 			<input ng-model="recordedCallBodyArray.data.getConstraintsByKind('array')[0].length.comparator"/>
 		</md-input-container>
