--- a/js/app/body/recorded-call-body-object-template.html
+++ b/js/app/body/recorded-call-body-object-template.html
@@ -1,15 +1,16 @@
 <!-- Data -->
 <div ng-if="recordedCallBodyObject.data.getConstraintsByKind( 'object' ).length" flex layout="column">
 
-	<div ng-repeat="property in recordedCallBodyObject.data.getConstraintsByKind( 'object' )[ 0 ].data" layout="row" layout-align="start center" flex style="margin-top:20px;">
+	<div ng-repeat="property in recordedCallBodyObject.data.getConstraintsByKind( 'object' )[ 0 ].data" layout="row" layout-align="start start" flex class="property-panel">
 
 		<!-- Property -->
-		<div  style="width:200px;" layout="row">
+		<div style="min-width:100px;" layout="row">
 			<md-input-container flex>
 				<label>Property</label>
 				<input ng-model="property.name" class="md-block"/>
 			</md-input-container>
 		</div>
+		<!-- Remove -->
 		<div>
 			<!-- minwidth: fucking material has min-width: 88px -->
 			<md-button ng-click="recordedCallBodyObject.data.removeProperty(property)" style="min-width:0;width:40px;">&times;</md-button>
@@ -17,7 +18,7 @@
 
 		<!-- Body (depending on type) -->
 		<!-- margin: same as property which has place above for the label -->
-		<div flex recorded-call-body data-data="property.content" flex="75" style="margin-top:20px;">
+		<div flex recorded-call-body data-data="property.content" flex="75">
 		</div>
 
 	</div>
@@ -25,7 +26,7 @@
 	<!-- ADD PROPERTY -->
 	<div style="width:200px;" layout="row">
 		<!-- Button -->
-		<md-button ng-click="recordedCallBodyObject.startAddingProperty()" ng-if="!recordedCallBodyObject.isAddingProperty" flex>
+		<md-button ng-click="recordedCallBodyObject.startAddingProperty()" ng-if="!recordedCallBodyObject.isAddingProperty" flex class="add-property-button">
 			Add property
 		</md-button>
 		<!-- Type -->
